2008-10-14  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/apexsink/gstapexsink.c:
	Fix some more format string compiler warnings (from OS/X)

2008-10-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/apexsink/gstapexraop.c: (gst_apexraop_connect),
	(gst_apexraop_set_volume):
	Fix format string compiler warnings.

2008-10-12  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/oss4/oss4-mixer.c:
	* sys/oss4/oss4-sink.c:
	* sys/oss4/oss4-source.c:
	Add some spaces in translateable strings.
	Fixes: #555969 #555968 #555965

2008-10-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvdemux.c: (gst_flv_demux_pull_tag),
	(gst_flv_demux_pull_header):
	Fix regression of handling flow returns in pull mode.
	Fixes bug #556003.

2008-10-12  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/Makefile.am:
	Add apexsink to SUBDIRS. Fixes bug #555912.

2008-10-11  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/pipelines/metadata.c:
	Make the metadata test not fail when jpegenc isn't available....
	as it isn't here, because it's not in this module, and
	therefore not in the plugin path when the check runs.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Use gst_pad_alloc_buffer_and_set_caps() to make sure we get
	a buffer with caps that we can work with (i.e. the pad's caps).

	Add non-keyframe video frames to the index too but without the
	keyframe flag.

	Add audio frames to the index only if we have no video stream.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/flv/gstflvparse.c: (gst_flv_parse_tag_audio),
	(gst_flv_parse_tag_video):
	Create pads from the pad templates, use fixed caps on them
	and only activate them after the caps are set.

2008-10-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Disable flacparse for this release as it's too buggy.
